# praecepta

./: .gitignore  HACKING.md  README.md  getting-started.md  vale.ini
.github/: .jira_sync_config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-vale-package.yml  pytest.yml  testing-code-lint.yml
docs/: .custom_wordlist.txt  conf.py  index.md  redirects.txt
docs/_templates/: header.html
en/: index.md
styles/Canonical/: 003-Ubuntu-names-versions.yml  004-Canonical-product-names.yml  013-Spell-out-numbers-below-10.yml  015-No-prompts-in-comments.yml  016-No-inline-comments.yml  017-Avoid-long-code-blocks.yml  019-no-external-images.yml  025a-latinisms-with-english-equivalents.yml  027-non-descriptive-link-text.yml  400-Enforce-inclusive-terms.yml
styles/config/vocabularies/Canonical/: accept.txt
tests/: Makefile  conftest.py  pyproject.toml  requirements.txt  test_config.py  test_rules.py
tests/data/: manifest.yml  schema.json
